--- a/index.html
+++ b/index.html
@@ -3,4 +3,59 @@ layout: default
 title: Home
 ---
 
-<h2>Hello World</h2>
+<div class="carousel">
+  <div class="carousel__slides" tabindex="0">
+    <div class="carousel__slide">
+      <div class="carousel__slide-content">
+        <h2 class="carousel__slide-title">Lorem ipsum dolor sit amet.</h2>
+        <p class="carousel__slide-description">
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio.
+          Quisque volutpat mattis eros. Nullam malesuada erat ut turpis.
+          Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
+        </p>
+        <a href="#0" class="carousel__slide-button">Find out more</a>
+      </div>
+      <img
+        src="https://picsum.photos/1400/900"
+        class="carousel__slide-image"
+        alt="Image"
+      />
+    </div>
+    <div class="carousel__slide">
+      <div class="carousel__slide-content">
+        <h2 class="carousel__slide-title">
+          Donec odio. Quisque volutpat mattis eros.
+        </h2>
+        <p class="carousel__slide-description">
+          Donec nec justo eget felis facilisis fermentum. Aliquam porttitor
+          mauris sit amet orci. Aenean dignissim pellentesque felis.
+        </p>
+        <a href="#0" class="carousel__slide-button">Find out more</a>
+      </div>
+      <img
+        src="https://picsum.photos/1400/900"
+        class="carousel__slide-image"
+        alt="Image"
+      />
+    </div>
+    <div class="carousel__slide">
+      <div class="carousel__slide-content">
+        <h2 class="carousel__slide-title">
+          Nullam malesuada erat ut turpis.
+        </h2>
+        <p class="carousel__slide-description">
+          Praesent dapibus, neque id cursus faucibus, tortor neque egestas
+          auguae, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam
+          dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.
+        </p>
+        <a href="#0" class="carousel__slide-button">Find out more</a>
+      </div>
+      <img
+        src="https://picsum.photos/1400/900"
+        class="carousel__slide-image"
+        alt="Image"
+      />
+    </div>
+  </div>
+  <div class="carousel__controls"></div>
+</div>
