--- a/index.html
+++ b/index.html
@@ -58,4 +58,37 @@ title: Home
     </div>
   </div>
   <div class="carousel__controls"></div>
+</div> 
+<!-- .carousel -->
+
+<div class="cardscontainer flex one three-600">
+  <div>
+    <article class="card">
+      <img src="https://imgs.search.brave.com/_hR6EV3RL_ByjetMp3f9CYkTwHraPSyu6ckM95iZyWM/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzc5L2Rk/L2Y0Lzc5ZGRmNDY4/Y2Q1ZmZiZjQyYjIw/NzhjZjZmYzkyNzY3/LmpwZw">
+      <footer>
+        <h3>Meow</h3>
+        <button>View More</button>
+      </footer>
+    </article>
+  </div>
+  <div>
+    <article class="card">
+      <img src="https://imgs.search.brave.com/NpBHJoldqSIZ4R_fEHD1PrZcJ7tQx2glUnCen2pjZnU/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS50ZW5vci5jb20v/NnhsNkFuTlJ2MUFB/QUFBTS9mYW5ueS1j/YXIuZ2lm.gif">
+      <footer>
+        <h3>Mew</h3>
+        <button>View More</button>
+      </footer>
+    </article>
+  </div>
+  <div>
+    <article class="card">
+      <img src="https://imgs.search.brave.com/W96VQoTUExIagXk8-2btS0cwUEMmmIv1k57NvKfQBAs/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pLmlt/Z2ZsaXAuY29tLzQv/OGxvOGwwLmpwZw">
+      <footer>
+        <h3>Meowoeoewoeooew</h3>
+        <button>View More</button>
+      </footer>
+    </article>
+  </div>
 </div>
+
+
